--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "project to explain the advanced concepts of JS like the closure, lexical scoping, contect of this and more...",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "npm run open",
+    "open": "concurrently \"http-server -o -a localhost -p 3000\" \"open http://localhost:3000\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/inianantony/advanced_js/issues"
   },
-  "homepage": "https://github.com/inianantony/advanced_js#readme"
+  "homepage": "https://github.com/inianantony/advanced_js#readme",
+  "dependencies": {
+    "concurrently": "^5.1.0",
+    "express": "^4.17.1",
+    "http-server": "^0.12.1"
+  }
 }
